# Warewise

./: AccountDetails.cpp  AccountDetails.h  AccountDetails.ui  AppResources.qrc  Article.h  ArticleDisplayList.cpp  ArticleDisplayList.h  ArticleDisplayList.ui  CMakeLists.txt  addNewArticleForm.cpp  addNewArticleForm.h  addNewArticleForm.ui  dashboardWindow.cpp  dashboardWindow.h  dashboardWindow.ui  gProjectVersion.h  gdatabasehelpers.cpp  gdatabasehelpers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setNewPasswordForm.cpp  setNewPasswordForm.h  setNewPasswordForm.ui  user.cpp  user.h
resources/: WareWiseIcon.aps
